@@ -77,6 +77,7 @@ typedef struct {
         scan_data_type_t scan_data_type;
         region_scan_level_t region_scan_level;
         unsigned short detect_reverse_change;
+        unsigned short dump_with_ascii;
     } options;
 } globals_t;
 
